<resources>
    <string name="app_name">WeFluent</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">1456243647836157</string>
    <string name="fb_login_protocol_scheme">fb1456243647836157</string>
    <string name="LOGIN_FACEBOOK">Login with Facebook</string>
    <string name="LOGIN_TWITTER">Login with Twitter</string>
    <string name="LOGIN_GOOGLE">Login with Google+</string>
    <string name="TWITTER_CONSUMER_KEY">8aflJ9vwE2Ypcbs1GjfYk3klT</string>
    <string name="TWITTER_CONSUMER_SECRET">qiD5ASIlTeSpSE54QIY883f2we6uyqHO88Gru8o3555MqnWj3j</string>
    <string name="HOME">Home</string>
    <string name="WORDS">Words</string>
    <string name="RECORDED_CALLS">Recorded</string>
    <string name="SUPPORT">Support</string>
    <string name="PROFILE">Profile</string>
    <string name="WE_FLUENT">We Fluent</string>
    <string name="CONFIRM_CALL">Call teacher</string>
    <string name="CONFIRM_CALL_MESSAGE">Are you sure you want to call your teacher %s ?</string>
    <string name="CONFIRM">confirm</string>
    <string name="CANCEL">cancel</string>
</resources>
